# lyrics-app

./: .gitignore  LICENSE.txt  README.md  index.html  package-lock.json  package.json  structure.md
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  env.json.example  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: lyrics_api.rs  mod.rs  server.rs
src-tauri/src/api/spotify_api/: mod.rs  spotify_credentials.rs
src-tauri/src/controllers/: authentication.rs  mod.rs  song_details.rs
src-tauri/src/models/: mod.rs  netease_lyrics_model.rs  netease_songs_model.rs  spotify_credentials_model.rs  spotify_track_model.rs  spotify_user_model.rs
src-tauri/src/utils/: mod.rs
src/api/: server.js
src/components/: Page.tsx  addMinusButton.tsx  authButton.tsx  dropDown.tsx  homeButton.tsx  lyricsArea.tsx  saveButton.tsx  userButton.tsx
src/components/styles/: dropDown.js
src/components/utils/: countLine.ts  parseLrc.ts
src/pages/: index.tsx  login.tsx  lyric-list.tsx  lyric.tsx  lyrics.tsx
src/pages/styles/: index.js  login.js  lyric.js  lyrics-list.js
