[package]
name = "spotify-lyrics-app"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-read-file", "fs-create-dir", "fs-exists", "shell-open", "fs-write-file", "fs-read-dir", "shell-execute", "dialog-confirm", "dialog-message"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features= ["json"] }
tokio = { version = "1", features = ["full"] }
actix-web = "4.8.0"
chrono = "0.4"
regex = "1.10"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
